Solucionado bug submenus: relacionado con overflow hidden, sustituido por overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@
 /* 1. Theme default css */
 /* line 4, C:/Users/SPN Graphics/Desktop/CL September/Edu mark/207 Education/HTML/scss/_reset.scss */
 body {
+  overflow-x: hidden;
   font-family: "Crimson Text", serif;
   font-weight: normal;
   font-style: normal;
@@ -807,7 +808,6 @@ h3 {
 
 /* line 1, C:/Users/SPN Graphics/Desktop/CL September/Edu mark/207 Education/HTML/scss/_header.scss */
 .header-area {
-  overflow: hidden;
   position: absolute;
   left: 0;
   right: 0;
